# vorion

./: .changelogrc.json  .editorconfig  .gitignore  .gitleaks.toml  .gitmodules  .madgerc  .npmrc  .semgrepignore  CHANGELOG.md  CLAUDE.md  CLAUDE_CONTEXT.md  CODE_OF_CONDUCT.md  COMPLETENESS-ANALYSIS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.lite  ENV_SECRETS_MATRIX.md  FEATURE_PLAN_20260208.md  GIT_SANITATION_REPORT.md  GOVERNANCE.md  LICENSE  PHASE-6-ARCHITECTURE-DECISIONS.md  PHASE-6-DESIGN-QUESTIONS.md  PHASE-6-DEVELOPER-BRIEFING.md  PHASE-6-EXECUTIVE-SUMMARY.md  PHASE-6-LAUNCH.md  PHASE-6-QUICK-REFERENCE.md  PHASE-6-WEEK1-KICKOFF.md  PHASE-6-WEEK3-COMPLETE.md  PHASE-6-WEEK4-COMPLETE.md  PHASE-6-WEEK5-COMPLETE.md  PHASE-6-WEEK6-COMPLETE.md  PHASE-6-WEEK7-INTEGRATION-COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  README.md  RECRUITMENT-PITCHES.md  RELEASE_ROADMAP_2026.md  (+37 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDABOT_TRIAGE.md  SECURITY.md  dependabot.yml  pull_request_template.md  release.yml
.husky/: pre-commit
_bmad/: index.md
analysis/: BLUE_TEAM_REPORT.md  BUILD_DEPLOYMENT_ASSESSMENT.md  DEAD_CODE_REPORT.md  ENTERPRISE_REQUIREMENTS.md  GOVERNMENT_REQUIREMENTS.md  GREEN_TEAM_REPORT.md  INTERNATIONAL_REQUIREMENTS.md  ORANGE_TEAM_REPORT.md  PURPLE_TEAM_REPORT.md  REPO_ASSESSMENT.md  STRATEGIC_COMPLETION_GAMEPLAN.md  WHITE_TEAM_REPORT.md  YELLOW_TEAM_REPORT.md  architecture-health.md  gap-assessment.json  gap-assessment.md  intent-reality-gap.md  security-audit.md
arch-struct/: Re_ Document shared with you_ _ATSF_v3.4_White_Paper.docx_.md  VORION — FULL REMAINDER BUILD SPEC (MASTER) 1.10.md  VORION-STACK-ARCHITECTURE.md
basis-core/: CONTRIBUTING.md  README.md
cognigate-api/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  PERFORMANCE-OPTIMIZATIONS.md  README.md  pyproject.toml  requirements.txt
cognigate-api/api/: index.py
cognigate-api/app/: __init__.py  config.py  main.py
cognigate-api/app/core/: __init__.py  agentanchor_trust.py  async_logger.py  auth.py  cache.py  circuit_breaker.py  critic.py  llm_intent.py  logic_client.py  policy_engine.py  redis_velocity.py  signatures.py  tripwires.py  trust_service.py  velocity.py
cognigate-api/app/db/: __init__.py  database.py  models.py  proof_repository.py
cognigate-api/app/models/: __init__.py  common.py  critic.py  enforce.py  intent.py  proof.py
cognigate-api/app/routers/: __init__.py  admin.py  enforce.py  health.py  intent.py  proof.py
cognigate-api/docs/: CONFIGURATION.md  DEPLOYMENT.md  IMPLEMENTATION-LOG.md  INSTALLATION.md  TROUBLESHOOTING.md  agentanchor.md  cognigate.md  navigation.md
cognigate-api/docs/basis/: index.md
cognigate-api/docs/layers/: chain.md  enforce.md  intent.md  proof.md
cognigate-api/policies/: basis-core.yaml
cognigate-api/static/: index.html  status.html
cognigate-api/tests/: __init__.py  conftest.py  test_admin.py  test_circuit_breaker.py  test_enforce.py  test_intent.py  test_policy_engine.py  test_proof.py  test_tripwires.py
compliance/: cisa-ssdf-attestation.md  control-registry.yaml  framework-naming.yaml  governance-matrix.yaml  sbom-compliance.yaml
config/: basis-requirements.yaml  quality-gates.yaml  workstreams.yaml
dashboards/: intent-overview.json
docs/: ATSF_White_Paper_v3.0.md  AXIOM-GITHUB-ALIGNMENT-AUDIT.md  AgentAnchor Platform & ATSF v4.0_ Enterprise AI Governance Roadmap (2026-2030).md  BASIS.md  CAISI-LISTENING-SESSION-SUBMISSIONS.md  CAR-ANALYSIS-TO-EXECUTION.md  CAR-COMPLETE-COVERAGE-AUDIT.md  CAR-DOCUMENTATION-INDEX.md  CAR-EXECUTIVE-SUMMARY.md  CAR-IMPLEMENTATION-CHECKLIST.md  CAR-QUICK-REFERENCE.md  CAR-REVIEW-SUMMARY.md  CAR-SECURITY-HARDENING-PLAN.md  CAR-SPECIFICATION.md  CAR-STANDARDS-CONSOLIDATED.md  CONFIG_REFERENCE.md  CONSOLIDATION-STATUS.md  DATABASE_HA.md  DEVELOPER_PITCH.md  DOMAIN-ALIGNMENT.md  DR_POLICY.md  FLUID-GOVERNANCE-ARCHITECTURE.md  GLOSSARY.md  HITL-CURRICULUM.md  HSM_INTEGRATION.md  IMPLEMENTATION-ROADMAP.md  KAIZEN-ARCHITECTURE.md  LAUNCH-COPY-FIRST-WAVE.md  LICENSE_AUDIT.md  MALLEABLE-CRYPTO-ASSESSMENT.md  MASTER-ARCHITECTURE.md  MASTER-PROJECT-INVENTORY.md  MIGRATION.md  MISSION-CONTROL-NARRATIVE.md  MOCK_AUDIT_PREP_LBF2.md  NIST_AI_RMF_CASE_STUDY.md  ONBOARDING-TASK-BREAKDOWN.md  ORION V1 — AGENT ANCHOR (MOST UP-TO.txt  ORION V1 — EVERYTHING ELSE (COMBINE.txt  ORION V1 — JOINT OWNERSHIP, EXECUTI cont.txt  (+33 more)
docs/ATSF_v3.4_Complete/atsf_v3_package/: BOUNTY_SPECS.md  README.md  README.md.bak  ROADMAP_2026.md  pyproject.toml
docs/ATSF_v3.4_Complete/atsf_v3_package/docs/: mkdocs.yml
docs/ATSF_v3.4_Complete/atsf_v3_package/docs/docs/security/: layer-reference.md
docs/ATSF_v3.4_Complete/atsf_v3_package/helm/atsf/: Chart.yaml  values.yaml
docs/ATSF_v3.4_Complete/atsf_v3_package/helm/atsf/templates/: deployment.yaml
docs/ATSF_v3.4_Complete/atsf_v3_package/src/: ai_trism_integration.py  anti_sandbagging_detector.py  atsf_api.py  instrumental_convergence.py  inverse_reward_modeling.py  replication_prevention.py  semantic_success_validator.py  stpa_hro_integration.py  trust_velocity_caps.py
docs/ATSF_v3.4_Complete/atsf_v3_package/src/atsf/: atsf_api.py  autogpt_integration.py  cli.py  cognitive_cube.py  containment_protocols.py  crewai_integration.py  intent_outcome_alignment.py  persistence.py  redis_cache.py  sdk.py  tracing.py  zkml_interface.py
e2e/: smoke.spec.ts
examples/: README.md  autogen-integration.ts  car-identity.ts  crewai-integration.ts  governance.ts  hello-world.ts  langchain-agent.ts  langchain-integration.ts  package.json  quickstart.ts  remote-mode.ts  trust-scoring.ts
examples/sdk-rust/: Cargo.toml
examples/sdk-rust/src/: main.rs
k6/: soak.js  spike.js  steady-state.js
kaizen-docs/: LICENSE  README.md  docusaurus.config.ts  netlify.toml  package.json  sidebars.ts  vercel.json
monitoring/: README.md
openapi/: cognigate-api.yaml  extensions-api.yaml  (+1 more)
tools/ssp-generator/: __init__.py  __main__.py  cli.py  package_generator.py  pyproject.toml  requirements.txt  ssp_generator.py  validator.py
(+2792 files in other folders)
