[package]
name = "vorion-aci-example"
version = "0.1.0"
edition = "2021"
description = "Vorion ACI Rust SDK Example"
authors = ["Vorion Team"]
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

[[bin]]
name = "aci-example"
path = "src/main.rs"
