[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vorion-ssp-generator"
version = "1.0.0"
description = "Vorion Cognigate OSCAL SSP Auto-Draft Generator"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
authors = [
    {name = "Vorion, Inc.", email = "engineering@vorion.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0.1",
    "jsonschema>=4.20.0",
    "openpyxl>=3.1.2",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "types-PyYAML>=6.0.12",
    "types-requests>=2.31.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.scripts]
ssp-generator = "vorion.tools.ssp_generator.cli:main"

[tool.setuptools.packages.find]
where = ["../../.."]
include = ["vorion.tools.ssp_generator*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
